--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,13 @@
+> 11 May 2020 | 17:00
+
+--| Fixes
+  - Fixed an issue where the command "inventory" would not work becuase of the multi word change
+
+--| Changes
+  - Added ActionResponse to add Items to the Player Inventory
+  - Added the tutorial room explaining game commands and how to use them
+  - Changed the function to add Items to the corresponding Dicitionary to use it between scripts
+
 > 10 May 2020 | 15:30
 	
 --| Fixes
@@ -7,4 +17,4 @@
  - Added functionality for two worded items like "gun barrel" or "rusty key"
  - Added Exit-Descriptions to Exit-Class
  - Changed Take-function. Now the player can attempt to take items with a text response without the item actually being picked up.
-	exampke "take chest" -> "the chest is too heavy to be picked up"
+	example "take chest" -> "the chest is too heavy to be picked up"
